# AMI-DLMS-Manager

./: .gitignore  AsyncDatabase.h  AsyncOracle.h  AsyncPostgresql.h  AsyncPostgresqlConnector.h  CMakeLists.txt  CMakePresets.json  DEPENDENCIES.md  GURUX_INSTALL.md  Qgdw.cpp  Qgdw.h  README.md  Server.cpp  Server.h  Session.cpp  Session.d  Session.h  SessionFactory.h  THIRD_PARTY_NOTICES.md  device_connector.cpp  device_connector.h  funciones.cpp  funciones.h  main.cpp  mapsconf.h  toolchain.cmake
.github/workflows/: build.yml
